--- a/app/index.html
+++ b/app/index.html
@@ -21,21 +21,40 @@
     <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body>
+<body>
 
-    <div class="hero-unit">
-      <h1>'Allo, 'Allo!</h1>
-      <p>You now have</p>
-      <ul>
-        <li>HTML5 Boilerplate</li>
-        <li>Normalize CSS</li>
-        <li>Sass</li>
-        <li>Modernizr</li>
-        <li>Bourbon & Neat</li>
-        <li>UnderscoreJS</li>
-      </ul>
-      <p>Don't forget to update your readme file!!</p>
-    </div>
+    
+  <h1>A Shirt Program</h1>
+
+  <h3>Enter your Data</h3>
+    <form id="data-entry">
+      <input type="number" name="retailPrice" placeholder="enter t-shirt retail price"/>
+      <input type="number" name="unitCost" placeholder="enter cost per t-shirt"/>        
+      <input type="number" name="unitsSold" placeholder="how many units do you expect to sell?"/>
+      <button>Submit</button>
+    </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
