--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
 
   <h3>Enter your Data</h3>
     <form id="data-entry">
+      <input type="text" name="unitName" placeholder="enter the name of your t-shirt"/>
       <input type="number" name="retailPrice" placeholder="enter t-shirt retail price"/>
       <input type="number" name="unitCost" placeholder="enter cost per t-shirt"/>        
       <input type="number" name="unitsSold" placeholder="how many units do you expect to sell?"/>
