--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
   </head>
 <body>
 
-    
+      
   <h1>A Shirt Program</h1>
 
   <h3>Enter your Data</h3>
@@ -66,6 +66,7 @@
 
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
+        <script src="scripts/notes.js"></script>
         <!-- endbuild -->
 </body>
 </html>
